cattle-viz-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cattle-viz-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: cattle.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
